<resources>
    <string name="app_name">AdviceLabA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dontyouHaveAnAcc">Dont you have an account yet? Register here.</string>
    <string name="alreadyHave">Already have an account? Login here.</string>
    <string name="name">Username</string>
    <string name="register">Register</string>
    <string name="following">Following</string>
    <string name="films">Films</string>
    <string name="filmName">Film Name</string>
    <string name="filmgenre">Genre</string>
    <string name="puan">Rate</string>
    <string name="desc">Write your comments about the movie..</string>
    <string name="share">Share</string>
    <string name="follower">Follower</string>
    <string name="begen">Beğen</string>
    <string name="kaydet">Kaydet</string>
    <string name="yorum">Yorum yap</string>
    <string name="send">Gönder</string>
</resources>