<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app"
        android:fillViewport="true"
        >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SharePostFragment"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="180dp"
        android:layout_height="260dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filmNameTxt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#e0e0e0 "
        android:hint="@string/filmName"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:boxStrokeColor="#e0e0e0"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
        android:textSize="16sp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filmGenreTxt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#e0e0e0 "
        android:hint="@string/filmgenre"
        app:boxStrokeColor="#e0e0e0"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/filmNameTxt"
        app:layout_constraintStart_toStartOf="@+id/filmNameTxt"
        app:layout_constraintTop_toBottomOf="@+id/filmNameTxt">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filmPuanTxt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#e0e0e0 "
        android:hint="@string/puan"
        app:boxStrokeColor="#e0e0e0"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="16dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/filmNameTxt"
        app:layout_constraintStart_toStartOf="@+id/filmNameTxt"
        app:layout_constraintTop_toBottomOf="@+id/filmGenreTxt">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filmDescTxt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:background="#e0e0e0"
        android:hint="@string/desc"
        app:boxStrokeColor="#e0e0e0"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="16dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/filmNameTxt"
        app:layout_constraintStart_toStartOf="@+id/filmNameTxt"
        app:layout_constraintTop_toBottomOf="@+id/filmPuanTxt">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:gravity="start"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/shareButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/share"
        android:textColor="#FCFCFC"
        android:background="@drawable/bg_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/filmNameTxt"
        app:layout_constraintStart_toStartOf="@+id/filmNameTxt"
        app:layout_constraintTop_toBottomOf="@+id/filmDescTxt" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@id/shareButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>